<resources>
    <string name="app_name">Plush Shar</string>
    <string name="hello_world">Hello world!!</string>
    <string name="bonus_name">Bonus programm</string>
    <string name="change_text">Change text</string>
    <string name="hello_world1">World hello!!!</string>
    <string name="button_text2">I am change</string>
    <string name="name_autorized_phone">Enter phone</string>
    <string name="seiting">Message blank / n enter the text and try again</string>
    <string name="exit">Exit</string>
    <string name="vkontatke">VKontakte</string>
    <string name="bonus_card">Bonus Card</string>
    <string name="accouting">Авторизация</string>
    <string name="fb">facebook</string>
    <string name="google">GOOGLE</string>
    <integer name="com_vk_sdk_AppId">6185335</integer>
    <string name="no_messange">Message blank / n enter the text and try again</string>
    <string name="messange_send">Send</string>
    <string name="inputTextIdCard">Enter card number</string>
    <string name="inputTextPhone">Enter phone</string>
    <string name="inputTextEmail">Enter you e-mail</string>

    <!-- Strings related to login -->
</resources>
