<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:windowBackground="@color/colorPrimary"
    tools:context="bulyak.com.myapplication.ui.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:layout_width="256dp"
        android:layout_height="147dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/greetin_edittext_idcard"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_card_giftcard_24dp"
            android:hint="@string/bonus_card"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/fontNorm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <RelativeLayout
            android:layout_width="258dp"
            android:layout_height="48dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="66dp">

            <EditText
                android:id="@+id/greetin_edittext_phone_Countru"
                android:layout_width="55dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:clickable="false"
                android:drawableLeft="@drawable/ic_contact_phone_24dp"
                android:hint="@string/inputTextPhone"
                android:inputType="none"
                android:maxLength="2"
                android:text="+7"
                android:textColor="@color/fontNorm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/greetin_edittext_phone" />

            <EditText
                android:id="@+id/greetin_edittext_phone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_toEndOf="@+id/greetin_edittext_phone_Countru"
                android:layout_weight="0.83"
                android:hint="@string/inputTextPhone"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/fontNorm"
                android:textDirection="firstStrongLtr"
                app:layout_constraintLeft_toRightOf="@+id/greetin_edittext_phone_Countru"
                app:layout_constraintRight_toRightOf="parent" />


        </RelativeLayout>

        <EditText
            android:id="@+id/greetin_edittext_mail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_email_24dp"
            android:hint="@string/inputTextEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/fontNorm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetin_edittext_phone" />
    </LinearLayout>




</android.support.constraint.ConstraintLayout>