<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bulyak.com.myapplication.ui.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="334dp"
        android:layout_height="117dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_plush_shar"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <CheckBox
        android:id="@+id/messange_checkBox_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:drawableStart="@drawable/ic_google_plus"
        android:text="@string/google"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/messange_checkBox_fb"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        android:layout_marginLeft="8dp"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:id="@+id/messange_checkBox_vc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:drawableStart="@drawable/ic_vk"
        android:text="@string/vk_name"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/messange_checkBox_google"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        android:layout_marginLeft="8dp" />

    <CheckBox
        android:id="@+id/messange_checkBox_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/fb"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        android:layout_marginLeft="8dp"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:drawableEnd="@drawable/ic_send_black_24dp"
        android:text="@string/messange_send"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        android:layout_marginLeft="8dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="221dp"
        android:layout_height="219dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        tools:ignore="LabelFor" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

</android.support.constraint.ConstraintLayout>